# yyx

./: CMakeLists.txt  ESP32_DEVKIT_PINOUT_MAP.txt  READM.md  README.md
.cache/clangd/index/: key.c.D4FBA41E4BFE82A6.idx  key.h.151D0A0A86B23A30.idx  led.c.172F0AA6AE2BBE35.idx  led.h.56A95A83ABE6949B.idx  main.c.FD30737C57D4842D.idx
.claude/: settings.json
components/BSP/: CMakeLists.txt
components/BSP/ADC/: adc.c  adc.h
components/BSP/BLUETOOTH/: bluetooth.c  bluetooth.h
components/BSP/DAC/: dac.c  dac.h
components/BSP/IIC/: ads1013.c  ads1013.h
components/BSP/KEY/: key.c  key.h
components/BSP/LED/: led.c  led.h
components/BSP/SPI/: CMakeLists.txt  dac7311.c  dac7311.h
main/: CMakeLists.txt  main.c
